--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,12 @@
                 </div>
             </div>
         </form>
+        <h4 class="text-center">{{session['secret_number']}}</h4>
         <div class="row justify-content-center mb-3">
-                <a href="/reset" class="btn btn-primary btn-lg btn-block col-2">Reset</a>
+                <a href="/reset" class="btn btn-secondary btn-lg btn-block col-2 mt-5">Reset</a>
+        </div>
+        <div class="row justify-content-center mb-3">
+            <a href="/leaderboard" class="btn btn-secondary btn-lg btn-block col-2">Leaderboard</a>
         </div>
     </div>
 </body>
